Fix overflow issues and add basic section separators

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -23,8 +23,6 @@
 // = Typography & Layout =
 // =======================
 
-// FIXME: We don't really need to embed all the glyphs only the amperand!
-
 @regular-font-family: 'Lato', sans-serif;
 @regular-font-variation: 400;
 @regular-font-offset: 0.887;
@@ -71,15 +69,29 @@ html {
 body {
 	// .show-baselines();
 }
+.wrapper {
+	overflow: hidden;
+}
 section {
+	position: relative;
 	margin: 0 auto;
 	padding: 6.25%;
 	max-width: @grid-width;
 	.padding-top(2);
 	.padding-bottom(2);
 	
-	@media screen and (max-width: @bp-hide-overflow) {
-		overflow: hidden;
+	+ section:before {
+		display: block;
+		position: absolute;
+		.top(-1);
+		left: 0;
+		right: 0;
+		color: @color-light;
+		text-align: center;
+		font-family: @accent-font-family, sans-serif;
+		font-size: 2em;
+		line-height: (1 / 1.25);
+		content: "* * *";
 	}
 }
 article + article {
@@ -116,29 +128,12 @@ p, ul, ol {
 	.margin-bottom(1);
 }
 ul {
-	list-style: none;
+	// list-style: none;
 	padding-left: 0;
 	
 	li {
 		position: relative;
 		.margin-bottom(0.33);
-		
-		&:before {
-			position: absolute;
-			top: 0.48em;
-			left: (@grid-gutter / 2 * -1.25);
-			
-			@media screen and (max-width: @bp-small-copy) {
-				left: (@grid-gutter / 2 * -0.75);
-			}
-			
-			content: "*";
-			font-family: @accent-font-family, sans-serif;
-			font-size: 1.25em;
-			line-height: (1 / 1.25);
-			
-			color: @color-light;
-		}
 	}
 }
 
@@ -162,8 +157,7 @@ figure {
 		max-width: 1024px;
 		margin-left: -4.5%;
 		margin-right: -4.5%;
-		box-shadow: 0 1px 2px 1px rgba(0,0,0, 0.25),
-			0 1px 2px 2px rgba(0,0,0,0.05);
+		box-shadow: 0 1px 2px 0px rgba(0,0,0,0.25);
 	}
 	
 	&.mini {
@@ -354,15 +348,6 @@ img {
 			
 			li {
 				.margin-bottom(0.25);
-				
-				&:before {
-					top: 0.45em;
-					left: (@grid-gutter / 2 * -1);
-			
-					@media screen and (max-width: @bp-small-copy) {
-						left: (@grid-gutter / 2 * -0.65);
-					}
-				}
 			}
 		}
 	}
@@ -390,7 +375,7 @@ img {
 		width: 76px;
 		height: 76px;
 		border-radius: 12px;
-		box-shadow: 0 1px 2px 0px rgba(0,0,0, 0.25);
+		box-shadow: 0 1px 2px 0px rgba(0,0,0,0.25);
 		
 		img {
 			width: 100%;
@@ -482,7 +467,7 @@ img {
 	Open-source libraries
 */
 #open-source-libraries {
-	.clearfix();
+	// overflow: hidden;
 	
 	h3 {
 		.invisible();
